--- a/labs/lab-18-auth/package.json
+++ b/labs/lab-18-auth/package.json
@@ -11,7 +11,8 @@
   "author": "Sergio Garnica González <sgarnica1902@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
